--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,18 @@
+Style/Documentation:
+  Enabled: false
+
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Naming/MethodParameterName:
+Lint/UselessAssignment:
   Enabled: false
+
+Style/StringLiterals:
+  Enabled: false
+
+Style/WordArray:
+  Enabled: false
+
+Style/StringLiteralsInInterpolation:
+  Enabled: false
+  
